# cala-demo

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml
src/: account_sets.rs  accounts.rs  balance.rs  cli.rs  deposit.rs  journal.rs  lib.rs  list_accounts.rs  main.rs  transfer.rs  velocity.rs  withdrawal.rs
