[package]
name = "cala-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cala-ledger = "0.2.46"

anyhow = "1.0.89"
futures = "0.3.31"
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.128"
serde_with = "3.11.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
rust_decimal = "1.10.2"

[profile.release]
lto = true
